# fleqx

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  publish-to-pypi.yml  tests.yml
api/bijectors/: index.html
api/flows/: index.html
api/train/: index.html
docs/api/: bijectors.md  flows.md  train.md
examples/: unnormalized_data.ipynb
fleqx/: __init__.py  flows.py
fleqx/bijectors/: __init__.py  _affine_common.py  _coupling.py  _fork.py  _inverse.py  _invert.py  _masked_autoregressive.py  _masks.py  _permute.py  _planar.py
fleqx/train/: __init__.py  _loops.py  _losses.py  _train_utils.py
search/: search_index.json
tests/: test_bijectors.py  test_flows.py  test_training.py
