[project]
name = "fleqx"
version = "0.0.1"
description = "Normalizing flows for JAX, with a distreqx-native API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "fleqx contributors" }]
keywords = ["jax", "normalizing-flows", "distreqx", "equinox", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.7.0",
    "equinox>=0.11",
    "jaxtyping",
    "optax",
    "tqdm",
    "distreqx>=0.0.3",
]

[project.optional-dependencies]
test = ["pytest", "jax[cpu]"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.7",
]

[project.urls]
homepage = "https://gvcallen.github.io/fleqx"
documentation = "https://gvcallen.github.io/fleqx"
repository = "https://github.com/gvcallen/fleqx"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fleqx*"]

[tool.setuptools.package-data]
fleqx = ["py.typed"]
